--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "save": "git add . && git commit -m \"Chore: Save\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
